Added sbt intrepreter